<resources>
    <string name="app_name">create-a-rgb-color-app</string>
    <string name="create_an_rgb_color">Create an RGB Color</string>

    <string name="color_creator_description">
Add two hexadecimal characters between 0-9, A-F
or a-f without the \'#\' for each channel </string>
    <string name="red_channel">Red Channel</string>
    <string name="green_channel">Green Channel</string>
    <string name="blue_channel">Blue Channel</string>
    <string name="create_rgb_color">Create RGB Color</string>
</resources>