<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/color_creator_title"
        style="@style/color_creator_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_an_rgb_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/color_creator_description"
        style="@style/color_creator_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_creator_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_creator_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        style="@style/color_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/red_channel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_creator_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/red_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFabcdef0123456789"
            android:inputType="textCapCharacters"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        style="@style/color_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/green_channel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red_channel_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFabcdef0123456789"
            android:inputType="textCapCharacters"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        style="@style/color_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blue_channel"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/green_channel_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blue_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFabcdef0123456789"
            android:inputType="textCapCharacters"
            android:maxLength="2" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/color_creator_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/color_button"
        android:text="@string/create_rgb_color"
        app:layout_constraintTop_toBottomOf="@id/blue_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/color_creator_display"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="@style/color_display"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/color_creator_button"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>